--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
 
             <!--Tabs for special offers and services section-->
-            <div class="container-top">
+            <div id="container-top" >
 
                 <nav>
                     <div class="nav nav-tabs " id="nav-tab" role="tablist">
@@ -191,7 +191,7 @@
                   </nav>
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="featured" role="tabpanel" aria-labelledby="nav-home-tab">
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
                                     alt="jbl RR-56"></a>
                             <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
@@ -201,7 +201,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/featured/sennheiser-sn.png"
                                     alt="Sennheiser SN-67"></a>
                             <a class="tabs__product-name" href="">Sennheiser SN-67</a>
@@ -211,7 +211,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
                             <a class="tabs__product-name" href="">JBL GT-345</a>
                             <p>$120,00</p>
@@ -220,7 +220,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
                             <a class="tabs__product-name" href="">Sony S890</a>
                             <p>$259,00</p>
@@ -230,7 +230,7 @@
                         </article>
                     </div>
                     <div class="tab-pane fade" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
                                     alt="Marshal DR67"></a>
                             <a class="tabs__product-name" href="">Marshal DR67</a>
@@ -240,7 +240,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item"> 
                             <a class="tabs__image" href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
                             <a class="tabs__product-name" href="">V-MODA ER65</a>
                             <p>$80,00</p>
@@ -249,7 +249,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
                             <a class="tabs__product-name" href="">Bose G656-A</a>
                             <p>$65,00</p>
@@ -258,7 +258,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/sale/airpulse-r.png"
                                     alt="AirPulse R255"></a>
                             <a class="tabs__product-name" href="">AirPulse R255</a>
@@ -270,7 +270,7 @@
                   
                     </div>
                     <div class="tab-pane fade" id="new" role="tabpanel" aria-labelledby="nav-contact-tab">
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
                             <a class="tabs__product-name" href="">Sony YT555</a>
                             <p>$140,00</p>
@@ -279,7 +279,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
                             <a class="tabs__product-name" href="">Sony TT56</a>
                             <p>$98,00</p>
@@ -288,7 +288,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
                             <a class="tabs__product-name" href="">JBL BR-55</a>
                             <p>$110,00</p>
@@ -297,7 +297,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container">
+                        <article class="tabs__container" id="tab__item">
                             <a class="tabs__image" href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
                             <a class="tabs__product-name" href="">JBL 334WN</a>
                             <p>$140,00</p>
