--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="featured" role="tabpanel" aria-labelledby="nav-home-tab">
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
+                            <a class="tabs__image" href="product-card.html"><img id="tabs__img" src="img/featured/jbl-rr.png"
                                     alt="jbl RR-56"></a>
                             <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
                             <p>$110,00</p>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="tab-pane fade" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
+                            <a class="tabs__image" href="#"><img class="sm" src="img/sale/marshall-dr.png"
                                     alt="Marshal DR67"></a>
                             <a class="tabs__product-name" href="">Marshal DR67</a>
                             <p>$459,00</p>
@@ -259,7 +259,7 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/sale/airpulse-r.png"
+                            <a class="tabs__image" href="#"><img class="sm" src="img/sale/airpulse-r.png"
                                     alt="AirPulse R255"></a>
                             <a class="tabs__product-name" href="">AirPulse R255</a>
                             <p>$185,00</p>
