--- a/index.html
+++ b/index.html
@@ -89,35 +89,35 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
                         <div id="carousel__logo-bg"><img src="img/icons/money-back.svg" class="d-block" alt="..."></div>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption text-start">
                             <h5>Money backl</h5>
                             <p>30-days guarantee</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
                         <div id="carousel__logo-bg"><img src="img/icons/support.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption text-start">
                             <h5>24/7 Support</h5>
                             <p>We work round the clock</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div id="carousel__logo-bg"><img src="img/icons/fast-del.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption ">
+                        <div class="carousel-caption text-start">
                             <h5>Fast delivery</h5>
                             <p>In 2-4 business days</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
                         <div id="carousel__logo-bg"><img src="img/icons/free-ship.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption text-start">
                             <h5>Free Shipping</h5>
                             <p>For all orders over $100</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div id="carousel__logo-bg"><img src="img/icons/fast-del.svg" class="d-block " alt="..."></div>
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption text-start">
                             <h5>Fast delivery</h5>
                             <p>In 2-4 business days</p>
                         </div>
@@ -202,9 +202,9 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="featured" role="tabpanel" aria-labelledby="nav-home-tab">
-                        <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="product-card.html"><img id="tabs__img"
-                                    src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
+                        <article class="tabs__container " id="tab__item">
+                            <a class="tabs__image" href="product-card.html"><img class="d-block img-fluid mx-auto"
+                                    id="tabs__img" src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
                             <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
                             <p>$110,00</p>
                             <form action="#" method="get">
@@ -213,8 +213,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/featured/sennheiser-sn.png"
-                                    alt="Sennheiser SN-67"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/featured/sennheiser-sn.png" alt="Sennheiser SN-67"></a>
                             <a class="tabs__product-name" href="">Sennheiser SN-67</a>
                             <p>$213,00</p>
                             <form action="#" method="get">
@@ -223,7 +223,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
                             <a class="tabs__product-name" href="">JBL GT-345</a>
                             <p>$120,00</p>
                             <form action="#" method="get">
@@ -232,7 +233,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/featured/sony-s.png" alt="Sony S890"></a>
                             <a class="tabs__product-name" href="">Sony S890</a>
                             <p>$259,00</p>
                             <form action="#" method="get">
@@ -242,8 +244,8 @@
                     </div>
                     <div class="tab-pane fade" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="sm" src="img/sale/marshall-dr.png"
-                                    alt="Marshal DR67"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
+                                    src="img/sale/marshall-dr.png" alt="Marshal DR67"></a>
                             <a class="tabs__product-name" href="">Marshal DR67</a>
                             <p>$459,00</p>
                             <form action="#" method="get">
@@ -252,7 +254,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
                             <a class="tabs__product-name" href="">V-MODA ER65</a>
                             <p>$80,00</p>
                             <form action="#" method="get">
@@ -261,7 +264,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/sale/bose-g.png" alt="Bose G656-A"></a>
                             <a class="tabs__product-name" href="">Bose G656-A</a>
                             <p>$65,00</p>
                             <form action="#" method="get">
@@ -270,8 +274,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img class="sm" src="img/sale/airpulse-r.png"
-                                    alt="AirPulse R255"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
+                                    src="img/sale/airpulse-r.png" alt="AirPulse R255"></a>
                             <a class="tabs__product-name" href="">AirPulse R255</a>
                             <p>$185,00</p>
                             <form action="#" method="get">
@@ -282,7 +286,8 @@
                     </div>
                     <div class="tab-pane fade" id="new" role="tabpanel" aria-labelledby="nav-contact-tab">
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/new/sony-y.png" alt="Sony YT555"></a>
                             <a class="tabs__product-name" href="">Sony YT555</a>
                             <p>$140,00</p>
                             <form action="#" method="get">
@@ -291,7 +296,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/new/sony-tt.png" alt="Sony TT56"></a>
                             <a class="tabs__product-name" href="">Sony TT56</a>
                             <p>$98,00</p>
                             <form action="#" method="get">
@@ -300,7 +306,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/new/jbl-br.png" alt="JBL BR-55"></a>
                             <a class="tabs__product-name" href="">JBL BR-55</a>
                             <p>$110,00</p>
                             <form action="#" method="get">
@@ -309,7 +316,8 @@
                         </article>
 
                         <article class="tabs__container" id="tab__item">
-                            <a class="tabs__image" href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
+                            <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
+                                    src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
                             <a class="tabs__product-name" href="">JBL 334WN</a>
                             <p>$140,00</p>
                             <form action="#" method="get">
