Added animation for <banner item and product cards

--- a/product-card.html
+++ b/product-card.html
@@ -17,41 +17,45 @@
             <!--Контакти-->
 
             <div class="contacts contacts_white">
-                <div class="container-top">
+                <div class="container-top_contacts">
                     <div class="contacts__item contacts__item_black">
                         <span class="contacts__cellphone contacts__cellphone_white">Customer Care:</span>
                         <a href="tel:+12345678900">+1 (234) 567 89 00</a>
                     </div>
-                    <div class="contacts__item contacts__item_black">
+                    <div class="contacts__item contacts__item_black contacts__item_black_l">
                         <span class="contacts__mail contacts__mail_white">Email:</span>
                         <a href="mailto:basside@email.com">basside@email.com</a>
                     </div>
                 </div>
             </div>
             <!--Навігація-->
-            <div class="banner-bg banner-bg_white">
-                <nav class="navigation">
-                    <div class="navigation-logo">
-                        <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
-                    </div>
-                    <div class="navigation-pages">
-                        <a href="" class="navigations__headphones">Headphones</a>
-                        <a href="" class="navigations__speakers">Speakers</a>
-                        <a href="" class="navigations__news">News</a>
-                        <a href="" class="navigations__testimonials">Testimonials</a>
-                    </div>
-                    <div class="navigation-social">
-                        <a href="https://www.facebook.com/" target="blank"><img width="50"
-                                src="img/icons/facebook-icon.png" alt="facebook"></a>
-                        <a href="https://www.instagram.com/" target="blank"><img width="50"
-                                src="img/icons/insta-icon.png" alt="instagram"></a>
-                        <a href="https://twitter.com/" target="blank"><img width="50" src="img/icons/twitter-icon.png"
-                                alt="twitter"></a>
-                        <a href="https://www.youtube.com/" target="blank"><img width="50"
-                                src="img/icons/you-toube-icon.png" alt="youtube"></a>
-                    </div>
-                </nav>
-            </div>
+            <section class="banner-bg banner-bg_white">
+                <div class="container-top container-top_flex">
+                    <nav class="navigation">
+                        <div class="navigation-logo">
+                            <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
+                            <a href=""><img class="navigation__burger-button" src="img/icons/burger.png"
+                                    alt="burger logo"></a>
+                        </div>
+                        <div class="navigation-pages">
+                            <a href="" class="navigations__headphones">Headphones</a>
+                            <a href="" class="navigations__speakers">Speakers</a>
+                            <a href="" class="navigations__news">News</a>
+                            <a href="" class="navigations__testimonials">Testimonials</a>
+                        </div>
+                        <div class="navigation-social">
+                            <a href="https://www.facebook.com/" target="blank"><img width="50"
+                                    src="img/icons/facebook-icon.png" alt="facebook"></a>
+                            <a href="https://www.instagram.com/" target="blank"><img width="50"
+                                    src="img/icons/insta-icon.png" alt="instagram"></a>
+                            <a href="https://twitter.com/" target="blank"><img width="50"
+                                    src="img/icons/twitter-icon.png" alt="twitter"></a>
+                            <a href="https://www.youtube.com/" target="blank"><img width="50"
+                                    src="img/icons/you-toube-icon.png" alt="youtube"></a>
+                        </div>
+                    </nav>
+                </div>
+            </section>
         </header>
 
         <!--сторінка з продуктом-->
