--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <nav class="navigation">
                     <div class="navigation-logo">
                         <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
-                        <a href=""><img class="navigation__burger-button" src="img/icons/burger.png"
+                        <a href=""><img class="navigation__burger-button" src="img/icons/facebook-icon.png"
                                 alt="burger logo"></a>
                     </div>
                     <div class="navigation-pages">
