--- a/product-card.html
+++ b/product-card.html
@@ -19,16 +19,14 @@
         <!--Контакти-->
 
         <div class="contacts contacts_white">
-            <div class="container-top container-top_card ">
-                <div class="container-top_contacts">
-                    <div class="contacts__item contacts__item_black">
-                        <span class="contacts__cellphone contacts__cellphone_white">Customer Care:</span>
-                        <a href="tel:+12345678900">+1 (234) 567 89 00</a>
-                    </div>
-                    <div class="contacts__item contacts__item_black contacts__item_black_l">
-                        <span class="contacts__mail contacts__mail_white">Email:</span>
-                        <a href="mailto:basside@email.com">basside@email.com</a>
-                    </div>
+            <div class="container-top_contacts">
+                <div class="contacts__item contacts__item_black">
+                    <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
+                    <a href="tel:+12345678900">+1 (234) 567 89 00</a>
+                </div>
+                <div class="contacts__item contacts__item_black contacts__item_black_l">
+                    <span class="contacts__mail contacts__mail_black">Email:</span>
+                    <a href="mailto:basside@email.com">basside@email.com</a>
                 </div>
             </div>
         </div>
