Upgrade responsive for <tabs>

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
             </div>
 
-            <!--Tabsrgb(221, 214, 214)s and services section-->
+            <!--Tabs and services section-->
             <div id="container-top">
 
                 <nav>
@@ -201,8 +201,9 @@
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="featured" role="tabpanel" aria-labelledby="nav-home-tab">
-                        <article class="tabs__container " id="tab__item">
+                    <div class="tab-pane fade show active row" id="featured" role="tabpanel"
+                        aria-labelledby="nav-home-tab">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3 " id="tab__item">
                             <a class="tabs__image" href="product-card.html"><img class="d-block img-fluid mx-auto"
                                     id="tabs__img" src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
                             <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
@@ -212,7 +213,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/featured/sennheiser-sn.png" alt="Sennheiser SN-67"></a>
                             <a class="tabs__product-name" href="">Sennheiser SN-67</a>
@@ -222,7 +223,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
                             <a class="tabs__product-name" href="">JBL GT-345</a>
@@ -232,7 +233,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/featured/sony-s.png" alt="Sony S890"></a>
                             <a class="tabs__product-name" href="">Sony S890</a>
@@ -242,8 +243,8 @@
                             </form>
                         </article>
                     </div>
-                    <div class="tab-pane fade" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
-                        <article class="tabs__container" id="tab__item">
+                    <div class="tab-pane fade row" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
                                     src="img/sale/marshall-dr.png" alt="Marshal DR67"></a>
                             <a class="tabs__product-name" href="">Marshal DR67</a>
@@ -253,7 +254,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
                             <a class="tabs__product-name" href="">V-MODA ER65</a>
@@ -263,7 +264,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/sale/bose-g.png" alt="Bose G656-A"></a>
                             <a class="tabs__product-name" href="">Bose G656-A</a>
@@ -273,7 +274,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
                                     src="img/sale/airpulse-r.png" alt="AirPulse R255"></a>
                             <a class="tabs__product-name" href="">AirPulse R255</a>
@@ -284,8 +285,8 @@
                         </article>
 
                     </div>
-                    <div class="tab-pane fade" id="new" role="tabpanel" aria-labelledby="nav-contact-tab">
-                        <article class="tabs__container" id="tab__item">
+                    <div class="tab-pane fade row" id="new" role="tabpanel" aria-labelledby="nav-contact-tab">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/new/sony-y.png" alt="Sony YT555"></a>
                             <a class="tabs__product-name" href="">Sony YT555</a>
@@ -295,7 +296,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/new/sony-tt.png" alt="Sony TT56"></a>
                             <a class="tabs__product-name" href="">Sony TT56</a>
@@ -305,7 +306,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/new/jbl-br.png" alt="JBL BR-55"></a>
                             <a class="tabs__product-name" href="">JBL BR-55</a>
@@ -315,7 +316,7 @@
                             </form>
                         </article>
 
-                        <article class="tabs__container" id="tab__item">
+                        <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
                             <a class="tabs__product-name" href="">JBL 334WN</a>
