Added nav-menu for <product card> page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
 
     <header>
+        
         <!--Contacts-->
         <div class="contacts contacts_black">
             <div class="container-top_contacts">
@@ -201,7 +202,7 @@
                     </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active row" id="featured" role="tabpanel"
+                    <div class=" tab-pane fade show active row" id="featured" role="tabpanel"
                         aria-labelledby="nav-home-tab">
                         <article class="tabs__container col-xs-12 col-md-6 col-lg-3 " id="tab__item">
                             <a class="tabs__image" href="product-card.html"><img class="d-block img-fluid mx-auto"
@@ -243,7 +244,8 @@
                             </form>
                         </article>
                     </div>
-                    <div class="tab-pane fade row" id="sale" role="tabpanel" aria-labelledby="nav-profile-tab">
+                    <div class="d-flex flex-row tab-pane fade row" id="sale" role="tabpanel"
+                        aria-labelledby="nav-profile-tab">
                         <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto sm"
                                     src="img/sale/marshall-dr.png" alt="Marshal DR67"></a>
@@ -285,7 +287,8 @@
                         </article>
 
                     </div>
-                    <div class="tab-pane fade row" id="new" role="tabpanel" aria-labelledby="nav-contact-tab">
+                    <div class="d-flex flex-row tab-pane fade row" id="new" role="tabpanel"
+                        aria-labelledby="nav-contact-tab">
                         <article class="tabs__container col-xs-12 col-md-6 col-lg-3" id="tab__item">
                             <a class="tabs__image" href="#"><img class="d-block img-fluid mx-auto"
                                     src="img/new/sony-y.png" alt="Sony YT555"></a>
