--- a/product-card.html
+++ b/product-card.html
@@ -33,31 +33,70 @@
         <!--Навігація-->
         <section class="banner-bg_white">
 
-            <div class="container-top container-top_flex ">
-                <nav class="navigation">
-                    <div class="navigation-logo">
+            <!-- <div class="container-top container-top_flex ">
+                <nav class="navigation"> -->
+            <!-- <div class="navigation-logo">
                         <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
                         <a href=""><img class="navigation__burger-button" src="img/icons/burger.png"
                                 alt="burger logo"></a>
+                    </div> -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid mx-auto">
+                    <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbar-navigation" aria-controls="navbar-navigation" aria-expanded="false"
+                        aria-label="Переключатель навигации">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbar-navigation">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link " aria-current="page" href="#">Headphones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Speakers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">News</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link ">Testimonials</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="navigation-pages">
+                    <div class="collapse navbar-collapse nav-socials" id="navbar-navigation">
+                        <div class="nav-item">
+                            <a href="https://www.facebook.com/" target="blank"><img width="50"
+                                    src="img/icons/facebook-icon.png" alt="facebook"></a>
+                            <a href="https://www.instagram.com/" target="blank"><img width="50"
+                                    src="img/icons/insta-icon.png" alt="instagram"></a>
+                            <a href="https://twitter.com/" target="blank"><img width="50"
+                                    src="img/icons/twitter-icon.png" alt="twitter"></a>
+                            <a href="https://www.youtube.com/" target="blank"><img width="50"
+                                    src="img/icons/you-toube-icon.png" alt="youtube"></a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+            <!-- <div class="navigation-pages">
                         <a href="" class="navigations__headphones">Headphones</a>
                         <a href="" class="navigations__speakers">Speakers</a>
                         <a href="" class="navigations__news">News</a>
                         <a href="" class="navigations__testimonials">Testimonials</a>
-                    </div>
-                    <div class="navigation-social">
-                        <a href="https://www.facebook.com/" target="blank"><img width="50"
-                                src="img/icons/facebook-icon.png" alt="facebook"></a>
-                        <a href="https://www.instagram.com/" target="blank"><img width="50"
-                                src="img/icons/insta-icon.png" alt="instagram"></a>
-                        <a href="https://twitter.com/" target="blank"><img width="50" src="img/icons/twitter-icon.png"
-                                alt="twitter"></a>
-                        <a href="https://www.youtube.com/" target="blank"><img width="50"
-                                src="img/icons/you-toube-icon.png" alt="youtube"></a>
-                    </div>
-                </nav>
-            </div>
+                    </div> -->
+            <!-- <div class="navigation-social">
+                        <a href="https://www.facebook.com/" target="blank"><img width="50" src="img/icons/facebook-icon.png"
+                                alt="facebook"></a>
+                        <a href="https://www.instagram.com/" target="blank"><img width="50" src="img/icons/insta-icon.png"
+                                alt="instagram"></a>
+                        <a href="https://twitter.com/" target="blank"><img width="50" src="img/icons/twitter-icon.png" alt="twitter"></a>
+                        <a href="https://www.youtube.com/" target="blank"><img width="50" src="img/icons/you-toube-icon.png"
+                                alt="youtube"></a>
+                    </div> -->
+
+            <!-- </nav>
+            </div> -->
 
         </section>
     </header>
