--- a/product-card.html
+++ b/product-card.html
@@ -15,7 +15,7 @@
 <body>
     <!--Додаткова сторінка з продуктом -->
 
-    <header>
+    <header class="header-item">
         <!--Контакти-->
 
         <div class="contacts contacts_white">
