--- a/product-card.html
+++ b/product-card.html
@@ -18,7 +18,7 @@
     <header class="header-item">
         <!--Контакти-->
 
-        <div class="contacts contacts_white">
+        <div class="contactss contacts_white">
             <div class="container-top_contacts">
                 <div class="contacts__item contacts__item_black">
                     <span class="contacts__cellphone contacts__cellphone_black">Customer Care:</span>
