--- a/product-card.html
+++ b/product-card.html
@@ -60,7 +60,7 @@
                                 <a class="nav-link" href="#">News</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link ">Testimonials</a>
+                                <a class="nav-link" href="#">Testimonials</a>
                             </li>
                         </ul>
                     </div>
