--- a/product-card.html
+++ b/product-card.html
@@ -106,7 +106,7 @@
     <main class="product-page container-top container-top_card">
         <!-- <a href="" class="store-homepage">Store homepage</a> -->
         <div class="product-picture">
-            <img src="img/sale/airpulse-r.png" alt="product">
+            <img class="img-main" src="img/sale/airpulse-r.png" alt="product">
         </div>
         <div class="product-text">
             <div class="product__info">
